Dev fix: Column reordering could cause columns which weren't in the list of columns for column visibility to be shown.
- This fix addresses that, but it also results in the buttons being
  shown in their original order rather than in the new order. That will
  need to be addressed with another commit

Sync to source repo @325a071b834a71479e15a721dcbae7800fbc1a5e

--- a/css/buttons.jqueryui.css
+++ b/css/buttons.jqueryui.css
@@ -88,6 +88,7 @@ div.dt-button-collection.fixed {
   top: 50%;
   left: 50%;
   margin-left: -75px;
+  border-radius: 0;
 }
 div.dt-button-collection.fixed.two-column {
   margin-left: -150px;
